remove test.txt

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3073,7 +3073,7 @@ input, select, textarea {
 
 	#header {
 		padding: 5em 5em 1em 5em ;
-		text-align: center;
+		text-align: left;
 	}
 
 		#header h1 {
