--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -124,6 +124,7 @@ input, select, textarea {
 		color: rgba(255, 255, 255, 0.65);
 	}
 
+
 	body, input, select, textarea {
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-size: 17pt;
@@ -3321,15 +3322,44 @@ input, select, textarea {
 
 		@media screen and (max-width: 736px) {
 
-			#nav {
+			#nav ul{
 				display: none;
+			}
+
+			#nav.open ul{
+				display: block;
+				text-align: center;
 			}
 
 				#nav + #main {
 					padding-top: 0;
 				}
 
+				#menubar.navbar-toggle {
+				position: relative;
+				float: left;
+				padding: 9px 10px;
+				margin-top: 8px;
+				margin-right: 15px;
+				margin-bottom: 8px;
+				border-radius: 4px;
+				}
+
+				#menubar.navbar-toggle .icon-bar {
+				display: block;
+				width: 22px;
+				height: 2px;
+				background-color:black;
+				border-radius: 1px;
+				}
+
+				#menubar.navbar-toggle .icon-bar+.icon-bar {
+				margin-top: 4px;
+				}
+
 		}
+		
+
 
 /* Main */
 
