--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2927,6 +2927,70 @@ input, select, textarea {
 					}
 
 		}
+/* Projects Grid */
+		.grid-container{
+			display: grid;
+			grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+			justify-content: center;
+			gap: 0.5em;
+			padding-bottom: 10px;
+		}
+
+		.project-item{
+			display: flex;
+			padding: 0;
+			border-radius: 2px;
+			transition: transform 0.3s ease, box-shadow 0.3s ease;
+    		cursor: pointer;
+    		box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+		}
+
+		.project-item:hover{
+			transform: scale(1.03);
+			box-shadow: 0 8px 12px rgba(0,0,0,0.2);
+			z-index: 2
+		}
+
+		.project-item img{
+			filter: brightness(100%);
+			transition: filter 0.3s ease;
+			width: 100%;
+			display: block;
+			object-fit: cover;
+		}
+
+
+		.project-item:hover img{
+			filter: brightness(70%);
+		}
+
+		.hidden-text {
+			display: none;
+			position: absolute;
+			color:white;
+		}
+
+		.project-item:hover .hidden-text{
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			padding:20px;
+			color:white;
+			font-size: clamp(15px, 4vw, 10px);
+		}
+
+		.hidden-text:hover img{
+			filter: brightness(70%);
+		}
+
+		.project-item:hover .hidden-text h4{
+			color:white !important;
+		}
+
+		.project-item:hover .hidden-text h5{
+			color:white !important;
+		}
 
 /* Statistics */
 
@@ -3795,6 +3859,62 @@ input, select, textarea {
 						}
 
 		}
+
+/* Contact Box */
+.contact-box{
+	min-height: 20vh;
+	padding: 0;
+}
+
+.contact-form {
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-gap: 16px;
+	background-color: #ffffff;
+	padding: 32px;
+	border-radius: 16px;
+	box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+
+	@media (min-width: 768px) {
+		grid-template-columns: repeat(2, 1fr);
+	}
+
+	.form-group {
+
+		&.full {
+			grid-column: 1/-1;
+		}
+		label {
+			display: block;
+			margin-bottom: 5px;
+			text-align: start;
+			padding: 5px;
+		}
+
+		.form-element {
+			appearance: none;
+			border:none;
+			outline: none;
+			display: block;
+			width: 100%;
+			border-radius: 8px;
+			padding: 12px 16px;
+			background-color: white;
+
+		}
+		textarea {
+			resize: none;
+			min-height: 100px;
+		}
+	}
+
+	.submit-group{
+			grid-column: 1/-1;
+			display: flex;
+			justify-content: flex-end;
+			width: auto;
+		}
+}
 
 /* Footer */
 
