reformat generic.html future project page, added description to About Me

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,11 +99,11 @@ input, select, textarea {
 	}
 
 	body {
-		background-color: #935d8c;
-		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
+		background-color: #a163a1;
+		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #77828C 15%, #495846 85%);
+		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg,#77828C 15%, #495846 85%);
+		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg,  #77828C 15%, #495846 85%);
+		background-image: url("images/overlay.png"), linear-gradient(45deg, #77828C 15%, #495846 85%);
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -120,8 +120,8 @@ input, select, textarea {
 /* Type */
 
 	body {
-		background-color: #935d8c;
-		color: rgba(255, 255, 255, 0.65);
+		background-color: #573c53;
+		color: rgba(255, 232, 232, 0.65);
 	}
 
 
@@ -2519,6 +2519,7 @@ input, select, textarea {
 			margin-left: 0;
 		}
 
+
 			ul.actions.special li:first-child {
 				padding-left: 0;
 			}
@@ -2562,6 +2563,7 @@ input, select, textarea {
 			ul.actions.fit.stacked {
 				width: 100%;
 			}
+
 
 		@media screen and (max-width: 480px) {
 
@@ -3456,6 +3458,11 @@ input, select, textarea {
 			display: none
 		}
 
+		#nav.project ul{
+			display: flex;
+			justify-content: space-between;
+		}
+
 		@media screen and (max-width: 736px) {
 
 			#nav {
@@ -3727,10 +3734,10 @@ input, select, textarea {
 
 		#main header.major h2:after {
 			background-color: #dddddd;
-			background-image: -moz-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: -webkit-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: -ms-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
+			background-image: -moz-linear-gradient(90deg, #A69C1B, #8C786C, #151B26);
+			background-image: -webkit-linear-gradient(90deg, #A69C1B, #8C786C, #151B26);
+			background-image: -ms-linear-gradient(90deg, #A69C1B, #8C786C, #151B26);
+			background-image: linear-gradient(90deg, #A69C1B, #8C786C, #151B26);
 		}
 
 		#main table tbody tr {
@@ -3859,6 +3866,21 @@ input, select, textarea {
 						}
 
 		}
+/* Project Divs */
+
+.project-wrapper {
+	display: flex;
+	flex-direction: row;
+}
+
+.result {
+	display: flex;
+	justify-content: start;
+	align-items: end;
+	flex-direction: column;
+	text-align: end;
+}
+
 
 /* Contact Box */
 .contact-box{
